Alterando chave da API Maps

--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<script src="/js/prettier.js"></script>
+<%- include('scripts/prettier') %>
 <script type="module" src="/js/map.js"></script>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
