--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -1,4 +1,4 @@
-.event-form {
+.form {
   display: flex;
   flex-direction: column;
   height: 80%;
@@ -11,12 +11,12 @@
   margin-bottom: 2rem;
 }
 
-.event-form input {
+.form input {
   font-size: 2rem;
   margin-bottom: 2rem;
 }
 
-.event-form button {
+.form button {
   font-size: 2rem;
   text-transform: uppercase;
   border-radius: 1em;
