--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,5 +19,6 @@
       </div>
       <%- include('includes/event-list') %>
     </div>
+    <%- include('includes/modals/msg-modal') %>
   </section>
   <%- include('includes/footer') %>
