--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,6 +10,7 @@
     <div class="content">
       <form action="/mapsdb-api/v1/login" method="post" class="form login-form">
         <h1 class="form-title">Entrar na conta</h1>
+        <%- include('includes/modals/msg-modal') %>
 
         <label for="email">Email</label>
         <input type="email" name="email" id="email" class="underlay" autofocus>
