--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -10,6 +10,7 @@
     <div class="content">
       <form action="/mapsdb-api/v1/signin" method="post" class="form signin-form">
         <h1 class="form-title">Criar conta</h1>
+        <%- include('includes/modals/msg-modal') %>
 
         <label for="name">Nome</label>
         <input type="text" name="name" id="name" class="underlay" autofocus>
