--- a/src/views/includes/modals/delete.ejs
+++ b/src/views/includes/modals/delete.ejs
@@ -2,7 +2,7 @@
   <div class="del-mod-display">
     <p>Deseja mesmo deletar o evento?</p>
     <div class="del-mod-btns">
-      <form action="/mapsdb-api/v1/delete" method="post" class="form delete-form">
+      <form action="event/delete" method="post" class="form delete-form">
         <input type="hidden" name="id" id="del-evt-id">
         <button type="submit" class="btn-danger submit-btn">Deletar</button>
       </form>
