--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,7 @@
     <%- include('includes/nav') %>
     <%- include('includes/dark-mode-btn') %>
     <div class="content">
+      <p class="hidden"><%= user %></p>
       <div class="map-window shrunk">
         <button id="events-button" class="btn" title="Eventos">
           <ion-icon name="menu"></ion-icon>
