--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -8,7 +8,7 @@
     <%- include('includes/dark-mode-btn') %>
 
     <div class="content">
-      <form action="/mapsdb-api/v1/login" method="post" class="form login-form">
+      <form action="/login" method="post" class="form login-form">
         <h1 class="form-title">Entrar na conta</h1>
         <%- include('includes/modals/msg-modal') %>
 
