--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -8,7 +8,7 @@
     <%- include('includes/dark-mode-btn') %>
 
     <div class="content">
-      <form action="/mapsdb-api/v1/signin" method="post" class="form signin-form">
+      <form action="/signin" method="post" class="form signin-form">
         <h1 class="form-title">Criar conta</h1>
         <%- include('includes/modals/msg-modal') %>
 
