--- a/src/views/includes/event-search.ejs
+++ b/src/views/includes/event-search.ejs
@@ -1,7 +1,7 @@
-<div class="search">
+<div class="search underlay">
   <form action="/search" method="post">
-    <input type="search" name="text" id="search-bar" class="underlay" placeholder="Procurar evento">
-    <button id="search-btn" class="btn" title="Buscar evento">
+    <input type="search" name="text" id="search-bar" placeholder="Procurar evento">
+    <button id="search-btn" title="Buscar evento">
       <ion-icon name="search"></ion-icon>
     </button>
   </form>
