--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -24,7 +24,6 @@
 #events-button {
   font-size: 3rem;
   position: absolute;
-  border-radius: .5em;
   z-index: 2;
   height: 4rem;
   top: .5em;
@@ -38,7 +37,32 @@
   left: 70%;
   width: calc(30% - .6em);
   height: 100%;
-  padding: .6em .6em 0;
+  padding: 0 .6em;
+}
+
+.tabs {
+  display: flex;
+  font-size: 1.7rem;
+  justify-content: center;
+  gap: 3.6em;
+  border-bottom: 2px solid var(--TextLighter);
+  padding-bottom: .4em;
+}
+
+.tab-link {
+  cursor: pointer;
+}
+
+.closed {
+  color: var(--TextLighter);
+}
+
+.tab-content {
+  padding-top: .6em;
+}
+
+.search {
+  border-radius: 1em;
 }
 
 .search form {
@@ -49,8 +73,9 @@
 
 #search-bar {
   font-size: 2rem;
-  border: none;
+  background-color: transparent;
   border-radius: 1em;
+  border: none;
   width: 80%;
   height: 3em;
   padding: .6em;
@@ -58,7 +83,10 @@
 
 #search-btn {
   font-size: 3rem;
-  border-radius: .3em;
+  color: var(--MainText);
+  background-color: transparent;
+  border: none;
+  border-radius: 1em;
   height: 6rem;
   width: 6rem;
   padding: 1.5rem 0;
@@ -98,7 +126,6 @@
 
 .buttons .btn {
   font-size: 1.5rem;
-  border-radius: .5em;
   height: 2em;
   width: 2em;
   margin: 0 .3em;
@@ -120,4 +147,8 @@
 .dates {
   color: var(--TextLighter);
   font-size: 1.7rem;
+}
+
+.no-events {
+  color: var(--TextLighter);
 }
