--- a/public/styles/form.css
+++ b/public/styles/form.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 80%;
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
 }
 
@@ -14,6 +14,7 @@
 .form input {
   font-size: 2rem;
   margin-bottom: 2rem;
+  width: 100%;
 }
 
 .form button {
@@ -23,4 +24,29 @@
   width: fit-content;
   margin: 1em auto;
   padding: .6em 1.2em;
+}
+
+.password-input,
+.password-rep-input {
+  position: relative;
+  width: 100%;
+}
+
+.show-password,
+.show-password-rep {
+  cursor: pointer;
+  color: var(--MainText);
+  position: absolute;
+  height: 1em;
+  width: 1em;
+  top: .25em;
+  right: .5em;
+}
+
+.sp-over,
+.spr-over {
+  position: absolute;
+  height: 1em;
+  width: 1em;
+  top: 1px;
 }
