--- a/src/views/err/404.ejs
+++ b/src/views/err/404.ejs
@@ -1,8 +1,10 @@
 <%- include('../includes/head') %>
+<link rel="stylesheet" href="/styles/error.css">
 <title>Error 404</title>
 
 <body>
   <section class="container">
+    <%- include('../includes/nav') %>
     <h1 class="title error-title">Error 404</h1>
     <p class="error-desc">Page not found!</p>
   </section>
