--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -20,11 +20,25 @@
         <small class="input-err-msg hidden" id="email-err">Email inválido!</small>
 
         <label for="password">Senha</label>
-        <input type="password" name="password" id="password" class="underlay">
+        <div class="password-input">
+          <input type="password" name="password" id="password" class="pi-input underlay">
+          <div class="show-password">
+            <ion-icon name="eye" class="sp-icon"></ion-icon>
+            <ion-icon name="eye-off" class="sp-icon-off hidden"></ion-icon>
+            <div class="sp-over"></div>
+          </div>
+        </div>
         <small class="input-err-msg hidden" id="password-err">A senha deve conter entre 8 e 20 caracteres!</small>
 
         <label for="password-repeat">Confirmar senha</label>
-        <input type="password" name="password-repeat" id="password-repeat" class="underlay">
+        <div class="password-rep-input">
+          <input type="password" name="password-repeat" id="password-repeat" class="pri-input underlay">
+          <div class="show-password-rep">
+            <ion-icon name="eye" class="spr-icon"></ion-icon>
+            <ion-icon name="eye-off" class="spr-icon-off hidden"></ion-icon>
+            <div class="spr-over"></div>
+          </div>
+        </div>
         <small class="input-err-msg hidden" id="password-repeat-err">As senhas não são iguais!</small>
 
         <button type="submit" class="btn submit">Criar conta</button>
